--- a/adm/style/event/acp_posting_buttons_custom_tags_before.html
+++ b/adm/style/event/acp_posting_buttons_custom_tags_before.html
@@ -1,1 +1,3 @@
-<input type="button" class="button2" value="{{ lang('SITENAME') }}" style="width: 40px" onclick="bbstyle2()" title="{{ lang('SITENAME_HELP') }}" />
+{% if S_ADMIN_EDIT %}
+	<input type="button" class="button2" value="{{ lang('SITENAME') }}" style="width: 40px" onclick="bbstyle2()" title="{{ lang('SITENAME_HELP') }}" />
+{% endif %}
