--- a/adm/style/privacy_policy_data.html
+++ b/adm/style/privacy_policy_data.html
@@ -6,15 +6,7 @@
 	<br />
 {% endif %}
 
-<div class="head-panel">
-	<div class="head-title">{{ lang('ACP_PRIVACY_TITLE') }}</div>
-	<div class="head-description">{{ lang('ACP_PRIVACY_POLICY_EXPLAIN') }}</div>
-	<div class="version-wrapper" style="float: {{ S_CONTENT_FLOW_END }};">
-		<div class="version-text">{{ lang('VERSION') }}</div>
-		<div class="version-data">{{ PRIVACY_POLICY_VERSION }}</div>
-	</div>
-	<br />
-</div>
+{% include 'head_panel.html' %}
 
 <form id="privacy_policy_data" method="post" action="{U_ACTION}">
 
