--- a/adm/style/privacy_policy_manage.html
+++ b/adm/style/privacy_policy_manage.html
@@ -3,15 +3,7 @@
 
 <a name="maincontent"></a>
 
-<div class="head-panel">
-	<div class="head-title">{{ lang('COOKIE_POLICY') }}</div>
-	<div class="head-description">{{ lang('COOKIE_POLICY_EXPLAIN') }}</div>
-		<div class="version-wrapper" style="float: {{ S_CONTENT_FLOW_END }};">
-		<div class="version-text">{{ lang('VERSION') }}</div>
-		<div class="version-data">{{ PRIVACY_POLICY_VERSION }}</div>
-	</div>
-	<br />
-</div>
+{% include 'head_panel.html' %}
 
 <form id="privacypolicy" method="post" action="{{ U_ACTION }}">
 	<fieldset>
